First Commit
DONE:
 * Test for Add new Figure
 * Test for moving the figure